Render labels and fix user list overflowing.

--- a/resources/scss/repository/sidebar.scss
+++ b/resources/scss/repository/sidebar.scss
@@ -44,16 +44,19 @@
     position: absolute;
     bottom: 1rem;
 
+    width: calc(20% - 2rem);
+
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
     padding: 0.5rem;
     border-radius: 1rem;
     background-color: var(--background-color-two);
-      .user {
-        width: 2rem;
-        height: 2rem;
-        border-radius: 50%;
-      }
+
+    .user {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+    }
   }
 }
